--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,3 @@
 body { margin:0px; padding:0px; }
 a, img, button, p { border:0px; padding:0px; margin:0px; }
+.mainbox { width:100%; min-height:560px; background:#ddd; }
